# learn-ml

./: .gitignore  .python-version  LICENSE  Makefile  README.md  create_plots.py  eda.py  format_data.py  plots.py  requirements.in  requirements.txt  resources_and_todo.ipynb  todo.ipynb
data/: format_data.py
demos/: algs_classification.py  algs_compare_classification.py  algs_compare_regression.py  algs_regression.py  data_io.py  data_manipulation.py  eda.py  ensembles_bagging_classification.py  ensembles_boosting_classification.py  ensembles_stacking_classification.py  ensembles_voting_classification.py  featsel_classification.py  featsel_regression.py  metrics_classification.py  metrics_regression.py  modelsel_crossval.py  modelsel_loo.py  modelsel_random_test_train.py  modelsel_test_train.py  pipelines.py  plot_annotate.py  plot_barplot.py  plot_boxplot.py  plot_formatxticklabels.py  plot_heatmap.py  plot_histogram.py  plot_line.py  plot_scatter.py  plot_scattermatrix.py  preproc.py  preproc_column_transformer.py  preproc_encoding.py  proj_template.py  proj_template_classification.py  proj_template_regression.py  tensorflow_basic.py  tuning.py  tuning_pipeline.py
experiments/: multilinear_interpolation.py  standardScaling_classification.py  (+1 more)
modules/: .python-version  Makefile  README.md  datacfg.py  dfutl.py  pyproject.toml  requirements.txt
modules/src/: confidence_intervals.py  counting_techniques.py  datacfg.py  dfutl.py  hypothesis_testing.py  plots.py
modules/src/learn_ml_modules.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
scripts/: install_pyenv.sh  (+1 more)
(+100 files in other folders)
